force-app/main/default/objects/TestReport__c/TestReport__c.object-meta.xml
<CustomObject>
    <label>Test Report</label>
    <nameField>
        <label>Nome do Teste</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>