force-app/main/default/objects/TestReport__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Test Reports</relationshipLabel>
    <relationshipName>Test_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>