force-app/main/default/objects/TestReport__c/fields/Cenarios_Falhos__c.field-meta.xml
<CustomField>
    <fullName>Cenarios_Falhos__c</fullName>
    <label>Cenários Falhos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>