force-app/main/default/objects/TestReport__c/fields/Cenarios_OK__c.field-meta.xml
<CustomField>
    <fullName>Cenarios_OK__c</fullName>
    <label>Cenários OK</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>