force-app/main/default/objects/TestReport__c/fields/MeetingMinutes__c.field-meta.xml
<CustomField>
    <fullName>MeetingMinutes__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Meeting Minutes</label>
    <referenceTo>MeetingMinutes__c</referenceTo>
    <relationshipLabel>Test Reports</relationshipLabel>
    <relationshipName>Test_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>