force-app/main/default/objects/TestReport__c/fields/Resultado__c.field-meta.xml
<CustomField>
    <fullName>Resultado__c</fullName>
    <label>Resultado</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>