force-app/main/default/objects/TestReport__c/fields/Status_Geral__c.field-meta.xml
<CustomField>
    <fullName>Status_Geral__c</fullName>
    <label>Status Geral</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aprovado</fullName>
            </value>
            <value>
                <fullName>Reprovado</fullName>
            </value>
            <value>
                <fullName>Parcial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>