force-app/main/default/objects/TestReport__c/fields/Total_Cenarios__c.field-meta.xml
<CustomField>
    <fullName>Total_Cenarios__c</fullName>
    <label>Total Cenários</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>